# cargo-avail

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/plans/: 2026-02-22-cargo-check-name-design.md  2026-02-22-cargo-check-name-plan.md
src/: check.rs  lib.rs  main.rs
tests/: api.rs  cli.rs
